<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="@drawable/rectangle_trans"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/txtProgramme"
            android:layout_width="107dp"
            android:layout_height="37dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="37dp"
            android:layout_marginBottom="21dp"
            android:text="@string/programme"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtCourse"
            android:layout_width="90dp"
            android:layout_height="37dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="37dp"
            android:layout_marginBottom="21dp"
            android:layout_toEndOf="@+id/txtProgramme"
            android:text="@string/course"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtLevel"
            android:layout_width="50dp"
            android:layout_height="37dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="21dp"
            android:layout_toEndOf="@+id/txtCourse"
            android:text="@string/level"
            android:textSize="15sp"
            android:textColor="@color/black"/>


        <TextView
            android:id="@+id/txtProgress"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginTop="39dp"
            android:layout_toRightOf="@id/txtLevel"
            android:text="25"
            android:textColor="#ED0404"
            android:textSize="20sp">

        </TextView>


    </RelativeLayout>

</RelativeLayout>