<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/geradient3"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/login_banner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="250dp"
                android:text="CREATE A NEW CLASS"
                android:textColor="#FF1493"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutAnimation="@anim/layout_animation">

                <Spinner
                    android:id="@+id/txtProg"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="300dp"
                    android:layout_marginRight="50dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_bg"
                    android:ems="10"
                    android:entries="@array/Courses"
                    android:hint="@string/enter_programme"
                    android:spinnerMode="dialog"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="61dp"
                    tools:layout_editor_absoluteY="39dp" />

                <Button
                    android:id="@+id/btngen"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="580dp"
                    android:layout_marginRight="50dp"
                    android:background="#FFEB3B"
                    android:textColor="#9C27B0"
                    android:backgroundTint="#3F51B5"
                    android:backgroundTintMode="add"
                    android:insetLeft="@dimen/_10sdp"
                    android:insetTop="@dimen/_10sdp"
                    android:text="@string/generate_code"
                    app:cornerRadius="@dimen/_15sdp"
                    app:rippleColor="#9C27B0"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="303dp" />

                <EditText
                    android:id="@+id/txtCourse"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="370dp"
                    android:layout_marginRight="50dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_bg"
                    android:ems="10"
                    android:hint="@string/enter_course_id"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="61dp"
                    tools:layout_editor_absoluteY="111dp" />

                <EditText
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="440dp"
                    android:layout_marginRight="50dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_bg"
                    android:ems="10"
                    android:hint="@string/enter_today_s_date"
                    android:inputType="date"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="61dp"
                    tools:layout_editor_absoluteY="239dp" />

                <Spinner
                    android:id="@+id/txtlevel"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="510dp"
                    android:layout_marginRight="50dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_bg"
                    android:ems="10"
                    android:entries="@array/Level"
                    android:hint="@string/enter_level"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="61dp"
                    tools:layout_editor_absoluteY="178dp" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:layout_alignParentBottom="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="NotSibling">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="#f6f6f6"
            app:fabCradleMargin="8dp"
            app:fabCradleRoundedCornerRadius="50dp"
            app:fabCradleVerticalOffset="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/homeBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/bottom_btn1" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Home"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp"
                        tools:ignore="DuplicateIds" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/connectBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        app:srcCompat="@drawable/connect"
                        tools:ignore="DuplicateIds" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Connect"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp"
                        tools:ignore="DuplicateIds" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/bottom_btn1"
                        tools:ignore="DuplicateIds" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Home"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp"
                        tools:ignore="DuplicateIds" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/classBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        app:srcCompat="@drawable/chart" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Class"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp"
                        tools:ignore="DuplicateIds" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profileBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        app:srcCompat="@drawable/ic_baseline_person_24"
                        tools:ignore="DuplicateIds" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Profile"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp"
                        tools:ignore="DuplicateIds" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#ff5e00"
            android:elevation="10dp"
            app:backgroundTint="#ff5e00"
            app:layout_anchor="@id/app_bar"
            app:maxImageSize="30dp"
            app:srcCompat="@drawable/add_2" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>